Javascript Product Sign

--- a/Javascript/02-ConditionalStatements/02-ConditionalStatements/01-ExchangeValue.html
+++ b/Javascript/02-ConditionalStatements/02-ConditionalStatements/01-ExchangeValue.html
@@ -8,6 +8,13 @@
 <body>
     <header>
         <a href="01-ExchangeValue.html">01-ExchangeValue</a> |
+        <a href="02-ProductSign.html">02-ProductSign</a> |
+        <a href="03-BiggestInt.html">03-BiggestInt</a> |
+        <a href="04-SortValues.html">04-SortValues</a> |
+        <a href="05-DigitName.html">05-DigitName</a> |
+        <a href="06-QuadricEquation.html">06-QuadricEquation</a> |
+        <a href="07-GreatestNumber.html">07-GreatestNumber</a> |
+        <a href="08-NumberToText.html">08-NumberToText</a>
     </header>
     <table>
         <tr>
@@ -28,7 +35,6 @@
     <script src="js/js-console.js">	  
     </script>
     <script>
-
         function onExecuteClick() {
             var a = jsConsole.readFloat("#a");
             var b = jsConsole.readFloat("#b");
