Js Conditional Statements progress

--- a/Javascript/02-ConditionalStatements/02-ConditionalStatements/02-ProductSign.html
+++ b/Javascript/02-ConditionalStatements/02-ConditionalStatements/02-ProductSign.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>01 - Exchange Value</title>
+    <title>02 - Product Sign</title>
     <link href="css/js-console.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
 </head>
