--- a/Javascript/02-ConditionalStatements/02-ConditionalStatements/03-BiggestInt.html
+++ b/Javascript/02-ConditionalStatements/02-ConditionalStatements/03-BiggestInt.html
@@ -1,7 +1,9 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>03 - Biggest Integer</title>
+    <link href="css/js-console.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -14,6 +16,51 @@
         <a href="07-GreatestNumber.html">07-GreatestNumber</a> |
         <a href="08-NumberToText.html">08-NumberToText</a>
     </header>
+    <table>
+        <tr>
+            <td>A:</td>
+            <td>
+                <input type="text" id="a" /></td>
+        </tr>
+        <tr>
+            <td>B:</td>
+            <td>
+                <input type="text" id="b" /></td>
+        </tr>
+        <tr>
+            <td>C:</td>
+            <td>
+                <input type="text" id="c" /></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <button onclick="onExecuteClick()">Execute</button></td>
+        </tr>
+    </table>
+    <div id="console">
+    </div>
+    <script src="js/js-console.js">	  
+    </script>
+    <script>
+        function onExecuteClick() {
+            var a = jsConsole.readInteger("#a");
+            var b = jsConsole.readInteger("#b");
+            var c = jsConsole.readInteger("#c");
 
+            if ((a >= b && a >= c)) {
+                jsConsole.writeLine(a + " is the biggest integer.");
+            }
+            else if (b >= a && b >= c) {
+                jsConsole.writeLine(b + " is the biggest integer.");
+            }
+            else {
+                jsConsole.writeLine(c + " is the biggest integer.");
+            }
+        }
+    </script>
+    <p style="font-size: 12px;">
+        // 03. Write a script that finds the biggest of three integers using nested if statements.
+    </p>
 </body>
 </html>
