--- a/Javascript/02-ConditionalStatements/02-ConditionalStatements/05-DigitName.html
+++ b/Javascript/02-ConditionalStatements/02-ConditionalStatements/05-DigitName.html
@@ -1,7 +1,9 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>05 - Digit Name</title>
+    <link href="css/js-console.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -14,5 +16,35 @@
         <a href="07-GreatestNumber.html">07-GreatestNumber</a> |
         <a href="08-NumberToText.html">08-NumberToText</a>
     </header>
+    <table>
+        <tr>
+            <td>Enter a digit (0 to 9):</td>
+            <td>
+                <input type="text" id="number" /></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>
+                <button onclick="onExecuteClick()">Execute</button></td>
+        </tr>
+    </table>
+    <div id="console">
+    </div>
+    <script src="js/js-console.js">	  
+    </script>
+    <script>
+        function onExecuteClick() {
+            var digit = jsConsole.readInteger("#number");
+            if (digit < 0 || digit > 9) {
+                jsConsole.writeLine("Invalid input!");
+            }
+            else {
+
+            }
+        }
+    </script>
+    <p style="font-size: 12px;">
+        // 05. Write script that asks for a digit and depending on the input shows the name of that digit (in English) using a switch statement.
+    </p>
 </body>
 </html>
