--- a/Javascript/02-ConditionalStatements/02-ConditionalStatements/02-ProductSign.html
+++ b/Javascript/02-ConditionalStatements/02-ConditionalStatements/02-ProductSign.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <a href="01-ExchangeValue.html">01-ExchangeValue</a> |
-        <a href="02-ProductSign.html">02-ProductSign</a> |
+        <a href="02-ProductSign.html" class="current">02-ProductSign</a> |
         <a href="03-BiggestInt.html">03-BiggestInt</a> |
         <a href="04-SortValues.html">04-SortValues</a> |
         <a href="05-DigitName.html">05-DigitName</a> |
