--- a/Javascript/02-ConditionalStatements/02-ConditionalStatements/01-ExchangeValue.html
+++ b/Javascript/02-ConditionalStatements/02-ConditionalStatements/01-ExchangeValue.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="01-ExchangeValue.html">01-ExchangeValue</a> |
+        <a href="01-ExchangeValue.html" class="current">01-ExchangeValue</a> |
         <a href="02-ProductSign.html">02-ProductSign</a> |
         <a href="03-BiggestInt.html">03-BiggestInt</a> |
         <a href="04-SortValues.html">04-SortValues</a> |
