--- a/Javascript/02-ConditionalStatements/02-ConditionalStatements/04-SortValues.html
+++ b/Javascript/02-ConditionalStatements/02-ConditionalStatements/04-SortValues.html
@@ -10,7 +10,7 @@
         <a href="01-ExchangeValue.html">01-ExchangeValue</a> |
         <a href="02-ProductSign.html">02-ProductSign</a> |
         <a href="03-BiggestInt.html">03-BiggestInt</a> |
-        <a href="04-SortValues.html">04-SortValues</a> |
+        <a href="04-SortValues.html" class="current">04-SortValues</a> |
         <a href="05-DigitName.html">05-DigitName</a> |
         <a href="06-QuadricEquation.html">06-QuadricEquation</a> |
         <a href="07-GreatestNumber.html">07-GreatestNumber</a> |
