--- a/Javascript/04-Arrays/04-Arrays/07-BinarySearch.html
+++ b/Javascript/04-Arrays/04-Arrays/07-BinarySearch.html
@@ -17,8 +17,12 @@
     </header>
     <table>
         <tr>
-            <td><label for="b">Loop Length:</label></td>
-            <td><input type="text" id="loopLength" /></td>
+            <td><label for="input">Sequence [,]</label></td>
+            <td><input type="text" id="input" /></td>
+        </tr>
+        <tr>
+            <td><label for="search">Searched Value</label></td>
+            <td><input type="text" id="search" /></td>
         </tr>
         <tr>
             <td></td>
@@ -30,7 +34,50 @@
     <script src="js/js-console.js">	  
     </script>
     <script>
+        function BinarySearch(array, search)
+        {
+            var leftPoint = 0;
+            var rightPoint = array.length - 1;
+            var midPoint = parseInt((leftPoint + rightPoint) / 2);
+
+            while (leftPoint <= rightPoint) {
+                midPoint = parseInt((leftPoint + rightPoint) / 2);
+                if (array[midPoint] != search) {
+                    if (search > array[midPoint]) {
+                        leftPoint = midPoint + 1;
+                    }
+                    else if (search < array[midPoint]) {
+                        rightPoint = midPoint - 1;
+                    }
+                }
+                else {
+                    return midPoint;
+                }
+            }
+            return -1;
+        }
+
+        function ParseArray(array)
+        {
+            for (var i = 0; i < array.length; i++) {
+                array[i] = parseInt(array[i]);
+            }
+            return array;
+        }
+
         function onExecuteClick() {
+            var numbers = jsConsole.read("#input").split(',');
+            numbers = ParseArray(numbers);
+            var search = jsConsole.readInteger("#search");
+
+            numbers.sort();
+            jsConsole.writeLine("Sorted array: ");
+            for (var i = 0; i < numbers.length; i++) {
+                jsConsole.write(numbers[i] + " ");
+            }
+            jsConsole.writeLine("<br/>");
+            jsConsole.writeLine("The index of " + search + " is " + BinarySearch(numbers, search));
+
 
         }
     </script>
