Javascript Functions Start

--- a/Javascript/05-Functions/05-Functions/01-LastDigit.html
+++ b/Javascript/05-Functions/05-Functions/01-LastDigit.html
@@ -30,13 +30,40 @@
     <script src="js/js-console.js">	  
     </script>
     <script>
+
+        function GetLastDigitName(number)
+        {
+            var lastDigit = number % 10;
+            switch (lastDigit) {
+                case 1:
+                    return "One";
+                case 2:
+                    return "Two";
+                case 3:
+                    return "Three";
+                case 4:
+                    return "Four";
+                case 5:
+                    return "Five";
+                case 6:
+                    return "Six";
+                case 7:
+                    return "Seven";
+                case 8:
+                    return "Eight";
+                case 9:
+                    return "Nine";
+                case 0:
+                    return "Zero";
+                default:
+                    break;
+            }
+        }
+
         function onExecuteClick() {
             var number = jsConsole.readInteger("#number");
-            var lastDigit = number % 10;
-            switch (switch_on) {
-                default:
-
-            }
+            var digitName = GetLastDigitName(number);
+            jsConsole.writeLine(digitName);
         }
     </script>
     <p style="font-size:12px;">
