--- a/Javascript/05-Functions/05-Functions/07-TwoNeighborsBigger.html
+++ b/Javascript/05-Functions/05-Functions/07-TwoNeighborsBigger.html
@@ -15,7 +15,11 @@
         <a href="06-TwoNeighbors.html">06-TwoNeighbors</a> |
         <a href="07-TwoNeighborsBigger.html" class="current">07-TwoNeighborsBigger</a>
     </header>
-    <table>
+<table>
+        <tr>
+            <td><label for="input">Sequence [,]</label></td>
+            <td><input type="text" id="input" /></td>
+        </tr>
         <tr>
             <td></td>
             <td><button onclick="onExecuteClick()">Execute</button></td>
@@ -26,8 +30,31 @@
     <script src="js/js-console.js">	  
     </script>
     <script>
+        function isBigger(numbers, position) {
+            if (position === 0 || position === numbers.length - 1) {
+                return "The position cannot be first or last element in the sequence!";
+            }
+            else {
+                if (numbers[position] > numbers[position - 1] && numbers[position] > numbers[position + 1]) {
+                    return true;
+                }
+                else {
+                    return false;
+                }
+            }
+        }
         function onExecuteClick() {
-
+            var numbers = jsConsole.read('#input').split(',');
+            for (var i = 0; i < numbers.length; i++) {
+                numbers[i] = parseInt(numbers[i]);
+            }
+            for (var i = 1; i < numbers.length - 1; i++) { // this skipps the first and the last element
+                if (isBigger(numbers, i)) {
+                    jsConsole.writeLine("Element index: " + i);
+                    return;
+                }
+            }
+            jsConsole.writeLine('-1');
         }
     </script>
     <p style="font-size:12px;">
