--- a/Javascript/07-Strings/06-ExtractText.html
+++ b/Javascript/07-Strings/06-ExtractText.html
@@ -22,6 +22,10 @@
     </header>
     <table>
         <tr>
+            <td>HTML:</td>
+            <td><input type="text" value="<html><head><title>Sample site</title></head><body><div>text<div>more text</div>and more...</div>in body</body></html>" id="input" /></td>
+        </tr>
+        <tr>
             <td></td>
             <td><button onclick="onExecuteClick()">Execute</button></td>
         </tr>
@@ -32,7 +36,9 @@
     </script>
     <script>
         function onExecuteClick() {
-
+            var text = jsConsole.read("#input");
+            var output = text.replace(/(<([^>]+)>)/ig, "");
+            jsConsole.writeLine(output);
         }
     </script>
     <p style="font-size:12px;">
